# bqsp-rs

./: Cargo.toml  README.md
src/: deserializer.rs  lib.rs  serializer.rs
src/boxes/: deserialized.rs  mod.rs  packed.rs
src/structure/: data.rs  header.rs  mod.rs
src/syntatic/: data.rs  header.rs  mod.rs
tests/: deserialization.rs  encdec.rs  header.rs
