[package]
name = "bqsp"
version = "0.5.1"
description = "Presentation layer protocol used to transport data in a fast and efficient manner."
edition = "2021"
authors = ["FssAy"]
readme = "README.md"
repository = "https://github.com/prty-app/bqsp-rs"
license = "CC-BY-4.0"

[features]
default = ["async"]
async = ["tokio"]

[dependencies.tokio]
version = "1.26.0"
optional = true
features = [
    "io-util"
]
